2002-08-22  Roland McGrath  <roland@redhat.com>

	* sysdeps/i386/useldt.h (INIT_THREAD_SELF): Remove [HAVE_TLS_SUPPORT]
	conditional.
	(INIT_THREAD_SELF): Pass second arg to DO_SET_THREAD_AREA.
	(DO_SET_THREAD_AREA): Take second arg, pass to DO_SET_THREAD_AREA_REUSE
	macro.  That chooses whether to reuse %gs value or let kernel set it.
	[USE_TLS] (DO_SET_THREAD_AREA_REUSE): New macro, always 1.
	[!USE_TLS] (DO_SET_THREAD_AREA_REUSE): New macro, true if arg is
	not constant 0.

2002-08-21  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/i386/tls.h (TLS_SETUP_GS_SEGMENT): Add new parameter
	also to the third definition of this macro.

2002-06-17  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/x86_64/Makefile (CFLAGS-pt-initfini.s):
	Set it.

2002-08-20  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/i386/useldt.h: Go back to using 16-bit instructions when
	loading/reading segment registers.  Some old hardware doesn't
	handle the 32-bit instructions as expected.
	* sysdeps/i386/tls.h: Likewise.

	* sysdeps/i386/tls.h (TLS_DO_SET_THREAD_AREA): Second parameter is
	renamed to secondcall and use is negated.
	(TLS_SETUP_GS_SEGMENT): Likewise.
	(TLS_INIT_TP): Likewise.
	* sysdeps/sh/tls.h (TLS_INIT_TP): Second parameter is renamed to
	secondcall.

	* sysdeps/i386/tls.h: Use 32-bit operations when handling segment
	registers.  No need to mask upper 16 bits in this case.
	* sysdeps/i386/useldt.h: Likewise.
	(DO_SET_THREAD_AREA): We have to load %gs again even if the value
	is the same since the GDT content changed.

	* sysdeps/i386/tls.h (TLS_INIT_TP): Add new parameter and pass it on
	to TLS_SETUP_GS_SEGMENT.
	(TLS_SETUP_GS_SEGMENT): Add new parameter and pass it on to
	TLS_DO_SET_THREAD_AREA.
	(TLS_DO_SET_THREAD_AREA): If new parameter is zero determine
	entry number from %gs value.
	* sysdeps/sh/tls.h (TLS_INIT_TP): Add new parameter and simply
	ignore it.

	* manager.c (pthread_handle_create): Pass NULL to _dl_allocate_tls.
	Pass true to _dl_deallocate_tls.